# 360_visual_inertial_odometry

./: .gitignore  CMakeLists.txt  README.md
app/: main.cpp
config/: default_config.yaml  titan_config.yaml
docs/: Changes_Implemented.md  Titan_Calibration_Suggestions.md  Titan_Run_Guide.md  titan_benchmark_template.csv
scripts/: validate_titan_dataset.py
src/database/: Frame.cpp  Frame.h  MapPoint.cpp  MapPoint.h
src/optimization/: Factors.cpp  Factors.h  Optimizer.cpp  Optimizer.h
src/processing/: Estimator.cpp  Estimator.h  FeatureTracker.cpp  FeatureTracker.h  IMUPreintegrator.cpp  Initializer.cpp  Initializer.h
src/util/: ConfigUtils.cpp  ConfigUtils.h  VizUtils.cpp  VizUtils.h
